Fixed wrapping div BG color

--- a/IR Events.html
+++ b/IR Events.html
@@ -36,6 +36,8 @@
       border:  none;
 
     }*/
+
+    .alchemy line:hover {stroke: red;}
     </style>
     <script>
         Breakpoints();
@@ -3059,7 +3061,7 @@ People’s Republic of Korea
                           dataSource: file_path,
                           forceLocked: false,
                           linkDistance: function(){ return 40; },
-
+                          nodeColour: "#188ae2"
                           nodeTypes: {"type":[]},
                           caption: function(node){
                               return node.caption;
@@ -3068,7 +3070,7 @@ People’s Republic of Korea
 
                         alchemy = new Alchemy(config)
                       </script>
-                      <div id="alchemy" style="width:1119px; height:328px; background:#000000;"> <svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" pointer-events="all" style="background:#ffffff;" alchInst="0"><g transform="translate(0,0) scale(1)"><g id="edge-8-1-0" class="edge all active" source-target="8-1" style="stroke: rgb(204, 204, 204); stroke-width: 4; opacity: 0.2; fill: none;" transform="translate(302.20698703058616, 251.05135132254424) rotate(-1.135972401618764)"><path class="edge-line" id="path-8-1" d="M12,0q75.48179096073278,0 142.63024858813222,0"></path><text dx="75.48179096073278" xlink:href="#path-8-1">NORTH KOREA,SOUTH KOREA,NORTH KOREA MILITARY ALLY</text><path class="edge-handler" style="stroke-width: 20; opacity: 0;" d="M12,0q75.48179096073278,0 142.63024858813222,0"></path></g><g id="edge-1-9-0" class="edge all active" source-target="1-9" style="stroke: rgb(204, 204, 204); stroke-width: 4; opacity: 0.2; fill: none;" transform="translate(469.47102211896583, 247.7346632569191) rotate(95.1201290637707)"><path class="edge-line" id="path-1-9" d="M12,0q55.35223023390831,0 102.37112713448329,0"></path><text dx="55.35223023390831" xlink:href="#path-1-9">NORTH
+                      <div id="alchemy" style="width:1119px; height:328px;"> <svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" pointer-events="all" style="background:#ffffff;" alchInst="0"><g transform="translate(0,0) scale(1)"><g id="edge-8-1-0" class="edge all active" source-target="8-1" style="stroke: rgb(204, 204, 204); stroke-width: 4; opacity: 0.2; fill: none;" transform="translate(302.20698703058616, 251.05135132254424) rotate(-1.135972401618764)"><path class="edge-line" id="path-8-1" d="M12,0q75.48179096073278,0 142.63024858813222,0"></path><text dx="75.48179096073278" xlink:href="#path-8-1">NORTH KOREA,SOUTH KOREA,NORTH KOREA MILITARY ALLY</text><path class="edge-handler" style="stroke-width: 20; opacity: 0;" d="M12,0q75.48179096073278,0 142.63024858813222,0"></path></g><g id="edge-1-9-0" class="edge all active" source-target="1-9" style="stroke: rgb(204, 204, 204); stroke-width: 4; opacity: 0.2; fill: none;" transform="translate(469.47102211896583, 247.7346632569191) rotate(95.1201290637707)"><path class="edge-line" id="path-1-9" d="M12,0q55.35223023390831,0 102.37112713448329,0"></path><text dx="55.35223023390831" xlink:href="#path-1-9">NORTH
  KOREA,US ALLIANCE MISSILE PROGRAM SOUTH KOREA,SOUTH KOREA,CHINAS ANGER
 US MISSILE DEFENCE SYSTEM COUNTRYS NUCLEAR WEAPONS PROGRAMME SOUTH
 KOREA,SOUTH KOREA STRICTER SANCTIONS</text><path class="edge-handler" style="stroke-width: 20; opacity: 0;" d="M12,0q55.35223023390831,0 102.37112713448329,0"></path></g><g id="edge-2-3-0" class="edge all active" source-target="2-3" style="stroke: rgb(204, 204, 204); stroke-width: 4; opacity: 0.2; fill: none;" transform="translate(411.5579322077017, 236.02743000503435) rotate(66.65619003965286)"><path class="edge-line" id="path-2-3" d="M12,0q21.199105330427308,0 34.06487732752128,0"></path><text dx="21.199105330427308" xlink:href="#path-2-3">DEVASTATING
