--- a/IR Events.html
+++ b/IR Events.html
@@ -3222,7 +3222,7 @@ KOREA,SOUTH KOREA STRICTER SANCTIONS</text><path class="edge-handler" style="str
                   </div>
                 </div>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" style="margin-top:10%">
                 <div class="widget">
                   <header class="widget-header">
                     <h4 class="widget-title">Word Cloud</h4></header>
